// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> Controller getInstances should match the snapshot 1`] = `
Array [
  <tr
    data-testid="dashboard-row-0"
  >
    <td
      data-testid="dashboard-row-0-status"
    >
      <span
        className="has-text-success"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       running
    </td>
    <td
      data-testid="dashboard-row-0-name"
    >
      Taylor Borer DDS
    </td>
    <td
      data-testid="dashboard-row-0-id"
    >
      z-194138vaab
    </td>
    <td
      data-testid="dashboard-row-0-type"
    >
      t3.medium
    </td>
    <td
      data-testid="dashboard-row-0-az"
    >
      us-gov-east-1
    </td>
    <td
      data-testid="dashboard-row-0-public-ip"
    >
      5.113.168.254
    </td>
    <td
      data-testid="dashboard-row-0-private-ips"
    >
      61.65.68.186, 53.168.179.193, 9.22.140.64, 136.249.94.125
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-1"
  >
    <td
      data-testid="dashboard-row-1-status"
    >
      <span
        className="has-text-danger"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       inactive
    </td>
    <td
      data-testid="dashboard-row-1-name"
    >
      Dexter Rippin
    </td>
    <td
      data-testid="dashboard-row-1-id"
    >
      k-734472kzcy
    </td>
    <td
      data-testid="dashboard-row-1-type"
    >
      m5zn.6xlarge
    </td>
    <td
      data-testid="dashboard-row-1-az"
    >
      me-south-1
    </td>
    <td
      data-testid="dashboard-row-1-public-ip"
    >
      138.116.114.84
    </td>
    <td
      data-testid="dashboard-row-1-private-ips"
    >
      175.213.207.138
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-2"
  >
    <td
      data-testid="dashboard-row-2-status"
    >
      <span
        className="has-text-success"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       running
    </td>
    <td
      data-testid="dashboard-row-2-name"
    >
      Earl Kreiger
    </td>
    <td
      data-testid="dashboard-row-2-id"
    >
      a-921969xxbt
    </td>
    <td
      data-testid="dashboard-row-2-type"
    >
      i3en.large
    </td>
    <td
      data-testid="dashboard-row-2-az"
    >
      af-south-1
    </td>
    <td
      data-testid="dashboard-row-2-public-ip"
    >
      21.222.169.227
    </td>
    <td
      data-testid="dashboard-row-2-private-ips"
    >
      138.208.146.1, 182.196.243.245
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-3"
  >
    <td
      data-testid="dashboard-row-3-status"
    >
      <span
        className="has-text-danger"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       inactive
    </td>
    <td
      data-testid="dashboard-row-3-name"
    >
      Israel Kihn
    </td>
    <td
      data-testid="dashboard-row-3-id"
    >
      n-239960ywad
    </td>
    <td
      data-testid="dashboard-row-3-type"
    >
      g4ad.xlarge
    </td>
    <td
      data-testid="dashboard-row-3-az"
    >
      ap-southeast-1
    </td>
    <td
      data-testid="dashboard-row-3-public-ip"
    >
      148.195.16.47
    </td>
    <td
      data-testid="dashboard-row-3-private-ips"
    >
      190.195.100.102, 0.71.145.217, 18.248.192.89, 37.172.229.29
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-4"
  >
    <td
      data-testid="dashboard-row-4-status"
    >
      <span
        className="has-text-success"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       running
    </td>
    <td
      data-testid="dashboard-row-4-name"
    >
      Dallas Crooks
    </td>
    <td
      data-testid="dashboard-row-4-id"
    >
      i-430597jjzc
    </td>
    <td
      data-testid="dashboard-row-4-type"
    >
      d2.8xlarge
    </td>
    <td
      data-testid="dashboard-row-4-az"
    >
      ap-east-1
    </td>
    <td
      data-testid="dashboard-row-4-public-ip"
    >
      219.111.37.248
    </td>
    <td
      data-testid="dashboard-row-4-private-ips"
    >
      117.161.227.5, 172.62.105.200, 52.208.124.5
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-5"
  >
    <td
      data-testid="dashboard-row-5-status"
    >
      <span
        className="has-text-danger"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       inactive
    </td>
    <td
      data-testid="dashboard-row-5-name"
    >
      Leona Sawayn
    </td>
    <td
      data-testid="dashboard-row-5-id"
    >
      u-944217jgqu
    </td>
    <td
      data-testid="dashboard-row-5-type"
    >
      i3en.12xlarge
    </td>
    <td
      data-testid="dashboard-row-5-az"
    >
      ap-south-1
    </td>
    <td
      data-testid="dashboard-row-5-public-ip"
    >
      193.36.200.66
    </td>
    <td
      data-testid="dashboard-row-5-private-ips"
    >
      140.231.159.87
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-6"
  >
    <td
      data-testid="dashboard-row-6-status"
    >
      <span
        className="has-text-success"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       running
    </td>
    <td
      data-testid="dashboard-row-6-name"
    >
      Ivan Altenwerth
    </td>
    <td
      data-testid="dashboard-row-6-id"
    >
      b-967501qgyy
    </td>
    <td
      data-testid="dashboard-row-6-type"
    >
      m5d.4xlarge
    </td>
    <td
      data-testid="dashboard-row-6-az"
    >
      ap-south-1
    </td>
    <td
      data-testid="dashboard-row-6-public-ip"
    >
      241.41.76.8
    </td>
    <td
      data-testid="dashboard-row-6-private-ips"
    >
      234.217.207.66, 217.139.198.207
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-7"
  >
    <td
      data-testid="dashboard-row-7-status"
    >
      <span
        className="has-text-danger"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       inactive
    </td>
    <td
      data-testid="dashboard-row-7-name"
    >
      Nicole Cassin
    </td>
    <td
      data-testid="dashboard-row-7-id"
    >
      i-559456frgo
    </td>
    <td
      data-testid="dashboard-row-7-type"
    >
      r6gd.2xlarge
    </td>
    <td
      data-testid="dashboard-row-7-az"
    >
      us-gov-west-1
    </td>
    <td
      data-testid="dashboard-row-7-public-ip"
    >
      52.161.120.134
    </td>
    <td
      data-testid="dashboard-row-7-private-ips"
    >
      109.179.26.144, 57.226.99.153, 152.64.232.250
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-8"
  >
    <td
      data-testid="dashboard-row-8-status"
    >
      <span
        className="has-text-success"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       running
    </td>
    <td
      data-testid="dashboard-row-8-name"
    >
      Dr. Santiago Rau
    </td>
    <td
      data-testid="dashboard-row-8-id"
    >
      m-505711ziia
    </td>
    <td
      data-testid="dashboard-row-8-type"
    >
      g3.4xlarge
    </td>
    <td
      data-testid="dashboard-row-8-az"
    >
      eu-west-2
    </td>
    <td
      data-testid="dashboard-row-8-public-ip"
    >
      29.134.207.246
    </td>
    <td
      data-testid="dashboard-row-8-private-ips"
    >
      42.101.107.239, 232.37.152.171, 78.78.123.33, 245.203.245.61
    </td>
  </tr>,
  <tr
    data-testid="dashboard-row-9"
  >
    <td
      data-testid="dashboard-row-9-status"
    >
      <span
        className="has-text-danger"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f111",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
              ],
              "iconName": "circle",
              "prefix": "fas",
            }
          }
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          swapOpacity={false}
          symbol={false}
          title=""
          transform={null}
        />
      </span>
       inactive
    </td>
    <td
      data-testid="dashboard-row-9-name"
    >
      Luke Lueilwitz Jr.
    </td>
    <td
      data-testid="dashboard-row-9-id"
    >
      j-433542ppjd
    </td>
    <td
      data-testid="dashboard-row-9-type"
    >
      t3a.large
    </td>
    <td
      data-testid="dashboard-row-9-az"
    >
      eu-central-1
    </td>
    <td
      data-testid="dashboard-row-9-public-ip"
    >
      48.35.91.144
    </td>
    <td
      data-testid="dashboard-row-9-private-ips"
    >
      17.40.160.102
    </td>
  </tr>,
]
`;

exports[`<Dashboard /> Controller getTabs should match the snapshot 1`] = `
Array [
  <Link
    href="/?test=test"
  >
    <a
      className="is-active"
    >
      Active instances
    </a>
  </Link>,
  <Link
    href="/?test=test"
  >
    <a
      className=""
    >
      Inactive instances
    </a>
  </Link>,
  <Link
    href="/?test=test"
  >
    <a
      className=""
    >
      All instances
    </a>
  </Link>,
]
`;

exports[`<Dashboard /> Snapshot testing with defaultProps 1`] = `
<section
  class="sc-eCImPb FnzKg columns is-centered"
>
  <article
    class="sc-jRQBWg csmCrb panel is-info"
  >
    <p
      class="panel-heading"
      data-testid="dashboard-heading-text"
    >
      EC2 instances
    </p>
    <div
      class="sc-gKclnd jwkUlj panel-tabs"
      data-testid="dashboard-tabs-container"
    >
      <a
        class=""
        href="/?page=1&status=running"
      >
        Active instances
      </a>
      <a
        class=""
        href="/?page=1&status=inactive"
      >
        Inactive instances
      </a>
      <a
        class=""
        href="/?page=1&status=all"
      >
        All instances
      </a>
    </div>
    <form
      class=""
      data-testid="dashboard-search-form"
    >
      <div
        class="panel-block"
      >
        <p
          class="control has-icons-left "
          data-testid="dashboard-search-search-container"
        >
          <input
            class="input is-info"
            data-testid="dashboard-search-search-input"
            placeholder="Search"
            type="text"
          />
          <span
            class="icon is-left"
            data-testid="dashboard-search-search-icon-container"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-search fa-w-16 "
              data-icon="search"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                fill="currentColor"
              />
            </svg>
          </span>
        </p>
        <button
          class="sc-hKwDye kIqGYP button is-info"
          data-testid="dashboard-search-button"
          type="submit"
        >
          Search
        </button>
      </div>
    </form>
    <div
      class="sc-bdvvtL gphgwm"
      data-testid="dashboard-table-container"
    >
      <table
        class="table is-fullwidth is-hoverable is-striped"
        data-testid="dashboard-table-table"
      >
        <thead
          data-testid="dashboard-table-head"
        >
          <tr>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-0"
            >
              <abbr
                title="status"
              >
                status
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-1"
            >
              <abbr
                title="name"
              >
                Name
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-2"
            >
              <abbr
                title="id"
              >
                ID
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-3"
            >
              <abbr
                title="type"
              >
                Type
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-4"
            >
              <abbr
                title="az"
              >
                AZ
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-5"
            >
              <abbr
                title="publicIp"
              >
                Public Ip
              </abbr>
            </th>
            <th
              class="sc-gsDKAQ bbRnY"
              data-testid="dashboard-table-sort-head-6"
            >
              <abbr
                title="privateIps"
              >
                Private IPs
              </abbr>
            </th>
          </tr>
        </thead>
        <tbody
          data-testid="dashboard-table-body"
        >
          <tr
            data-testid="dashboard-row-0"
          >
            <td
              data-testid="dashboard-row-0-status"
            >
              <span
                class="has-text-success"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               running
            </td>
            <td
              data-testid="dashboard-row-0-name"
            >
              Taylor Borer DDS
            </td>
            <td
              data-testid="dashboard-row-0-id"
            >
              z-194138vaab
            </td>
            <td
              data-testid="dashboard-row-0-type"
            >
              t3.medium
            </td>
            <td
              data-testid="dashboard-row-0-az"
            >
              us-gov-east-1
            </td>
            <td
              data-testid="dashboard-row-0-public-ip"
            >
              5.113.168.254
            </td>
            <td
              data-testid="dashboard-row-0-private-ips"
            >
              61.65.68.186, 53.168.179.193, 9.22.140.64, 136.249.94.125
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-1"
          >
            <td
              data-testid="dashboard-row-1-status"
            >
              <span
                class="has-text-danger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               inactive
            </td>
            <td
              data-testid="dashboard-row-1-name"
            >
              Dexter Rippin
            </td>
            <td
              data-testid="dashboard-row-1-id"
            >
              k-734472kzcy
            </td>
            <td
              data-testid="dashboard-row-1-type"
            >
              m5zn.6xlarge
            </td>
            <td
              data-testid="dashboard-row-1-az"
            >
              me-south-1
            </td>
            <td
              data-testid="dashboard-row-1-public-ip"
            >
              138.116.114.84
            </td>
            <td
              data-testid="dashboard-row-1-private-ips"
            >
              175.213.207.138
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-2"
          >
            <td
              data-testid="dashboard-row-2-status"
            >
              <span
                class="has-text-success"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               running
            </td>
            <td
              data-testid="dashboard-row-2-name"
            >
              Earl Kreiger
            </td>
            <td
              data-testid="dashboard-row-2-id"
            >
              a-921969xxbt
            </td>
            <td
              data-testid="dashboard-row-2-type"
            >
              i3en.large
            </td>
            <td
              data-testid="dashboard-row-2-az"
            >
              af-south-1
            </td>
            <td
              data-testid="dashboard-row-2-public-ip"
            >
              21.222.169.227
            </td>
            <td
              data-testid="dashboard-row-2-private-ips"
            >
              138.208.146.1, 182.196.243.245
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-3"
          >
            <td
              data-testid="dashboard-row-3-status"
            >
              <span
                class="has-text-danger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               inactive
            </td>
            <td
              data-testid="dashboard-row-3-name"
            >
              Israel Kihn
            </td>
            <td
              data-testid="dashboard-row-3-id"
            >
              n-239960ywad
            </td>
            <td
              data-testid="dashboard-row-3-type"
            >
              g4ad.xlarge
            </td>
            <td
              data-testid="dashboard-row-3-az"
            >
              ap-southeast-1
            </td>
            <td
              data-testid="dashboard-row-3-public-ip"
            >
              148.195.16.47
            </td>
            <td
              data-testid="dashboard-row-3-private-ips"
            >
              190.195.100.102, 0.71.145.217, 18.248.192.89, 37.172.229.29
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-4"
          >
            <td
              data-testid="dashboard-row-4-status"
            >
              <span
                class="has-text-success"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               running
            </td>
            <td
              data-testid="dashboard-row-4-name"
            >
              Dallas Crooks
            </td>
            <td
              data-testid="dashboard-row-4-id"
            >
              i-430597jjzc
            </td>
            <td
              data-testid="dashboard-row-4-type"
            >
              d2.8xlarge
            </td>
            <td
              data-testid="dashboard-row-4-az"
            >
              ap-east-1
            </td>
            <td
              data-testid="dashboard-row-4-public-ip"
            >
              219.111.37.248
            </td>
            <td
              data-testid="dashboard-row-4-private-ips"
            >
              117.161.227.5, 172.62.105.200, 52.208.124.5
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-5"
          >
            <td
              data-testid="dashboard-row-5-status"
            >
              <span
                class="has-text-danger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               inactive
            </td>
            <td
              data-testid="dashboard-row-5-name"
            >
              Leona Sawayn
            </td>
            <td
              data-testid="dashboard-row-5-id"
            >
              u-944217jgqu
            </td>
            <td
              data-testid="dashboard-row-5-type"
            >
              i3en.12xlarge
            </td>
            <td
              data-testid="dashboard-row-5-az"
            >
              ap-south-1
            </td>
            <td
              data-testid="dashboard-row-5-public-ip"
            >
              193.36.200.66
            </td>
            <td
              data-testid="dashboard-row-5-private-ips"
            >
              140.231.159.87
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-6"
          >
            <td
              data-testid="dashboard-row-6-status"
            >
              <span
                class="has-text-success"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               running
            </td>
            <td
              data-testid="dashboard-row-6-name"
            >
              Ivan Altenwerth
            </td>
            <td
              data-testid="dashboard-row-6-id"
            >
              b-967501qgyy
            </td>
            <td
              data-testid="dashboard-row-6-type"
            >
              m5d.4xlarge
            </td>
            <td
              data-testid="dashboard-row-6-az"
            >
              ap-south-1
            </td>
            <td
              data-testid="dashboard-row-6-public-ip"
            >
              241.41.76.8
            </td>
            <td
              data-testid="dashboard-row-6-private-ips"
            >
              234.217.207.66, 217.139.198.207
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-7"
          >
            <td
              data-testid="dashboard-row-7-status"
            >
              <span
                class="has-text-danger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               inactive
            </td>
            <td
              data-testid="dashboard-row-7-name"
            >
              Nicole Cassin
            </td>
            <td
              data-testid="dashboard-row-7-id"
            >
              i-559456frgo
            </td>
            <td
              data-testid="dashboard-row-7-type"
            >
              r6gd.2xlarge
            </td>
            <td
              data-testid="dashboard-row-7-az"
            >
              us-gov-west-1
            </td>
            <td
              data-testid="dashboard-row-7-public-ip"
            >
              52.161.120.134
            </td>
            <td
              data-testid="dashboard-row-7-private-ips"
            >
              109.179.26.144, 57.226.99.153, 152.64.232.250
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-8"
          >
            <td
              data-testid="dashboard-row-8-status"
            >
              <span
                class="has-text-success"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               running
            </td>
            <td
              data-testid="dashboard-row-8-name"
            >
              Dr. Santiago Rau
            </td>
            <td
              data-testid="dashboard-row-8-id"
            >
              m-505711ziia
            </td>
            <td
              data-testid="dashboard-row-8-type"
            >
              g3.4xlarge
            </td>
            <td
              data-testid="dashboard-row-8-az"
            >
              eu-west-2
            </td>
            <td
              data-testid="dashboard-row-8-public-ip"
            >
              29.134.207.246
            </td>
            <td
              data-testid="dashboard-row-8-private-ips"
            >
              42.101.107.239, 232.37.152.171, 78.78.123.33, 245.203.245.61
            </td>
          </tr>
          <tr
            data-testid="dashboard-row-9"
          >
            <td
              data-testid="dashboard-row-9-status"
            >
              <span
                class="has-text-danger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-circle fa-w-16 "
                  data-icon="circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                    fill="currentColor"
                  />
                </svg>
              </span>
               inactive
            </td>
            <td
              data-testid="dashboard-row-9-name"
            >
              Luke Lueilwitz Jr.
            </td>
            <td
              data-testid="dashboard-row-9-id"
            >
              j-433542ppjd
            </td>
            <td
              data-testid="dashboard-row-9-type"
            >
              t3a.large
            </td>
            <td
              data-testid="dashboard-row-9-az"
            >
              eu-central-1
            </td>
            <td
              data-testid="dashboard-row-9-public-ip"
            >
              48.35.91.144
            </td>
            <td
              data-testid="dashboard-row-9-private-ips"
            >
              17.40.160.102
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="tile is-ancestor "
      data-testid="dashboard-pagination-container"
    >
      <div
        class="tile is-parent"
      >
        <article
          class="tile is-child box"
        >
          <nav
            aria-label="pagination"
            class="pagination"
            role="navigation"
          >
            <a
              class="pagination-previous"
              data-testid="dashboard-pagination-previous"
            >
              Previous
            </a>
            <a
              class="pagination-next"
              data-testid="dashboard-pagination-next"
            >
              Next page
            </a>
            <ul
              class="pagination-list"
            >
              <li
                data-testid="dashboard-pagination-page-0"
              >
                <a
                  aria-label="Goto page 1"
                  class="pagination-link "
                >
                  1
                </a>
              </li>
              <li
                data-testid="dashboard-pagination-page-1"
              >
                <a
                  aria-label="Goto page 2"
                  class="pagination-link "
                >
                  2
                </a>
              </li>
              <li
                data-testid="dashboard-pagination-page-2"
              >
                <a
                  aria-label="Goto page 3"
                  class="pagination-link is-current"
                >
                  3
                </a>
              </li>
              <li
                data-testid="dashboard-pagination-page-3"
              >
                <a
                  aria-label="Goto page 4"
                  class="pagination-link "
                >
                  4
                </a>
              </li>
              <li
                data-testid="dashboard-pagination-page-4"
              >
                <a
                  aria-label="Goto page 5"
                  class="pagination-link "
                >
                  5
                </a>
              </li>
              <li
                data-testid="dashboard-pagination-ellipsis-5"
              >
                <span
                  class="pagination-ellipsis"
                >
                  …
                </span>
              </li>
              <li
                data-testid="dashboard-pagination-page-6"
              >
                <a
                  aria-label="Goto page 36"
                  class="pagination-link "
                >
                  36
                </a>
              </li>
            </ul>
          </nav>
        </article>
      </div>
    </div>
  </article>
</section>
`;

exports[`<Dashboard /> getServerSideProps should filter by page 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by page 2`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by page and status 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by page, status and search term 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by page, status, search term and sort by id 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by search term 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by search term 2`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by search term 3`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by status 1`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by status 2`] = `Promise {}`;

exports[`<Dashboard /> getServerSideProps should filter by status 3`] = `Promise {}`;
